--- a/automation-R.qmd
+++ b/automation-R.qmd
@@ -55,7 +55,7 @@ Cron is the lingua franca of automation.
 - Five
 - Six
 
-## Cron expressions
+## Cron expressions^[Adapted from: https://www.maximehuran.fr/en/create-a-cron-job-with-magento-2/]
 
 ```markdown
 * * * * *
@@ -72,4 +72,4 @@ Cron is the lingua franca of automation.
 * * * * * python -c 'print("Hello Python!")'
 ```
 
-Adapted from: https://www.maximehuran.fr/en/create-a-cron-job-with-magento-2/
+
